# detectozord

./: .gitignore  README.md  Untitled.ipynb  exercise2.7z
challenge_I/: CMakeLists.txt  steps
challenge_I/challenge_I/: CMakeLists.txt  main.cpp
challenge_II/: CMakeLists.txt
challenge_II/challenge_II/: CMakeLists.txt  main.cpp
exercise1/: CMakeLists.txt
exercise1/Exercise01/: CMakeLists.txt  main.cpp
exercise1/cmake/: macros.cmake
exercise2/: CMakeLists.txt
exercise2/Exercise02/: CMakeLists.txt  main.cpp
exercise3/: Prediction.ipynb  ROC_plot.ipynb  Training.ipynb  modifiedutils.py  prediction.py  training.py  utils.py
exercise3/checkpoints/: model.ckpt.data-00000-of-00001  model.ckpt.index
exercise3/log/: events.out.tfevents.1494628522.atcremers75  events.out.tfevents.1494668112.atcremers75  events.out.tfevents.1494668333.atcremers56  events.out.tfevents.1494669011.atcremers56  events.out.tfevents.1494669057.atcremers56  events.out.tfevents.1494670379.atcremers56  events.out.tfevents.1494670479.atcremers56  events.out.tfevents.1494670799.atcremers56  (+36 more)
exercise4/: Graph.ipynb  Pretrained.ipynb  RoIPooling.ipynb  Visualization.ipynb
exercise4/ssd/: demo.py  (+1 more)
exercise5/: CMakeLists.txt
exercise5/Data/pose/: pose1.txt  pose2.txt  pose3.txt  pose4.txt  pose5.txt
exercise5/Exercise05_1/: CMakeLists.txt  main.cpp
exercise5/Exercise05_2/: CMakeLists.txt  main.cpp
exercise6/: CMakeLists.txt
exercise7/: CMakeLists.txt
grabber/: openni_grabber.cpp
pointnet/: evaluate.py  train.py
segmentation/: CMakeLists.txt
utils/: CMakeLists.txt
(+79 files in other folders)
